# tauri-mobile-test

./: package.json
src/: App.tsx
src-tauri/: Cargo.toml  database.db  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  migrations.rs  models.rs
src/lib/: PostRepository.ts
